# nxbrew-watcher

./: CHANGES.rst  Dockerfile  README.md  nxbrew_watcher.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yaml
nxbrew_watcher/: __init__.py  watcher.py
nxbrew_watcher/utils/: __init__.py  discord.py  io.py  logger.py
